<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Farmacias de Turno</string>
    
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="dashboard_map">Ver Mapa</string>
    <string name="dashboard_list">Lista de Farmacias</string>
    <string name="dashboard_preferences">Configuracion</string>
    <string name="dashboard_refresh">Refrescar datos</string>
    <string name="dashboard_web">Web</string>
    <string name="dashboard_navigate">Navegar</string>
    
    <string name="map">Ver Map</string>
    <string name="list">Lista de Farmacias</string>
    <string name="detail">Detail</string>

    <string name="geonames_lang">en</string>
    
    <string name="tap_again_details">Tap again for details</string>
    
    <string name="menu_my_location">Ir a mi localizacion</string>

    <string name="loading">Cargando datos abiertos...</string>

	<string name="error">Ocurrio un error</string>
    <string name="error_location">No se ha podido identificar su localizacion</string>
    <string name="error_data">No se pudieron leer los datos abiertos, verifique su conexion a internet</string>
    
    <string name="detail_Farmacia">Farmacia:</string>
    <string name="detail_Telefono">Telefono:</string>
    <string name="detail_Direccion">Direccion:</string>
    <string name="detail_Horario">Horario de servicio:</string>
        <string name="detail_Localidad">Ciudad:</string>
    
    <string name="preferences">Configuracion</string>

    <string name="preferences_distance">Places to Show</string>
    <string name="preferences_distance_summary">Show at X Km from your position</string>
    
    <string name="preferences_satellite">Vista Satelital</string>
    <string name="preferences_satellite_summary">Ver Mapa Satelital</string>
    
    <string name="preferences_fullscreen">Pantalla Completa</string>
    <string name="preferences_fullscreen_summary">Mostrar pantalla completa</string>
</resources>